[package]
name = "pc_interface_shared"
version = "0.1.0"
edition = "2021"


[dependencies]
serialport = "^4.2.1"
anyleaf_usb = { path = "../anyleaf_usb" }

winit = "^0.28.6"

image = "^0.24.5" # For loading the window icon.

eframe = "^0.21.0"


# To parse enums from their integer repr
#num_enum = { version = "^0.5.7", default_features = false }