[package]
name = "pc_interface_shared"
version = "0.1.0"
edition = "2021"


[dependencies]
serialport = "^4.2.1"
anyleaf_usb = { path = "../anyleaf_usb" }

winit = "^0.29.4"

image = "^0.24.7" # For loading the window icon.

eframe = "0.23.0"


# To parse enums from their integer repr
#num_enum = { version = "^0.5.7", default_features = false }