[package]
name = "pc_interface_shared"
version = "0.1.0"
edition = "2024"


[dependencies]
serialport = "4.7.2"
anyleaf_usb = { path = "../anyleaf_usb" }

winit = "0.30.10"

image = "0.25.6" # For loading the window icon.

eframe = "0.31.1"


# To parse enums from their integer repr
#num_enum = { version = "^0.5.7", default_features = false }